# irstlm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  NOTE  README.md  configure.ac
doc/: CMakeLists.txt  ClassAndChunkLMs.tex  LMCompilation.tex  LMFiltering.tex  LMInterface.tex  LMInterpolation.tex  giganticLM.tex  irstlm-manual.tex
scripts/: CMakeLists.txt  Makefile.am  add-start-end.sh  build-lm-qsub.sh  build-lm.sh  build-sublm.pl  check_if_closed.sh  cmake_install.cmake  goograms2ngrams.pl  lm-stat.pl  mdtsel.sh  merge-sublm.pl  ngram-split.pl  plsa.sh  rm-start-end.sh  split-dict.pl  split-ngt.sh  wrapper
src/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  cmd.c  compile-lm.cpp  context-dependent-evaluation.cpp  context-dependent-evaluation.cpp_OK  context-similarity.cpp  context-similarity.h  cplsa.cpp  cplsa.h  crc.cpp  cswam.cpp  cswam.h  dict.cpp  dictionary.cpp  dictionary.h  doc.cpp  dtsel.cpp  gzfilebuf.h  htable.cpp  htable.h  interplm.cpp  interplm.h  interpolate-lm.cpp  linearlm.cpp  linearlm.h  lmContainer.cpp  lmContainer.h  lmContainer.h_OK  lmContextDependent.cpp  lmContextDependent.h  lmInterpolation.cpp  lmInterpolation.h  lmInterpolation.h_OK  lmclass.cpp  lmclass.h  lmmacro.cpp  lmmacro.h  (+29 more)
src/CMakeScripts/: LinkToLib64_cmakeRulesBuildPhase.makeRelease
src/irstlm.build/Debug/LinkToLib64.build/: Script-E93499FA38634908AE4CFD2A.sh  dgph  dgph~
src/irstlm.build/Debug/compile-lm.build/: dgph
src/irstlm.build/Debug/compile-lm.build/Objects-normal/x86_64/: compile-lm.LinkFileList  compile-lm.d
src/irstlm.build/Debug/context-dependent-evaluation.build/: dgph
src/irstlm.build/Debug/context-dependent-evaluation.build/Objects-normal/x86_64/: context-dependent-evaluation.LinkFileList  context-dependent-evaluation.d  context-dependent-evaluation.dia
src/irstlm.build/Debug/cswa.build/: dgph
src/irstlm.build/Debug/cswa.build/Objects-normal/x86_64/: cswa.LinkFileList  cswa.d
src/irstlm.build/Debug/dict.build/: dgph
src/irstlm.build/Debug/dict.build/Objects-normal/x86_64/: dict.LinkFileList  dict.d
src/irstlm.build/Debug/dtsel.build/: dgph~
src/irstlm.build/Debug/dtsel.build/Objects-normal/x86_64/: dtsel.LinkFileList  dtsel.d
src/irstlm.build/Debug/interpolate-lm.build/: dgph
src/irstlm.build/Debug/interpolate-lm.build/Objects-normal/x86_64/: interpolate-lm.LinkFileList  interpolate-lm.d
src/irstlm.build/Debug/irstlmStatic.build/: dgph
src/irstlm.build/Debug/irstlmStatic.build/Objects-normal/x86_64/: cmd.d  context-similarity.d  cplsa.d  crc.d  crc.dia  cswam.d  dictionary.d  dictionary.dia  doc.d  htable.d  htable.dia  interplm.d  irstlm.LinkFileList  linearlm.d  linearlm.dia  lmContainer.d  lmContainer.dia  lmContextDependent.d  lmContextDependent.dia  lmInterpolation.d  lmclass.d  lmclass.dia  lmmacro.d  lmmacro.dia  lmtable.d  lmtable.dia  mdiadapt.d  mdiadapt.dia  mempool.d  mfstream.d  mixture.d  mixture.dia  n_gram.d  ngramcache.d  ngramcache.dia  ngramtable.d  ngramtable.dia  normcache.d  shiftlm.d  shiftlm.dia  (+3 more)
src/irstlm.build/Debug/ngt.build/: dgph
src/irstlm.build/Debug/ngt.build/Objects-normal/x86_64/: ngt.LinkFileList  ngt.d
src/irstlm.build/Debug/plsa.build/: dgph
src/irstlm.build/Debug/plsa.build/Objects-normal/x86_64/: plsa.LinkFileList  plsa.d
src/irstlm.build/Debug/prune-lm.build/: dgph
src/irstlm.build/Debug/prune-lm.build/Objects-normal/x86_64/: prune-lm.LinkFileList  prune-lm.d  prune-lm.dia
src/irstlm.build/Debug/quantize-lm.build/: dgph~
src/irstlm.build/Debug/quantize-lm.build/Objects-normal/x86_64/: quantize-lm.LinkFileList  quantize-lm.d
src/irstlm.build/Debug/score-lm.build/: dgph
src/irstlm.build/Debug/score-lm.build/Objects-normal/x86_64/: score-lm.LinkFileList  score-lm.d  score-lm.dia
src/irstlm.build/Debug/tlm.build/: dgph
src/irstlm.build/Debug/tlm.build/Objects-normal/x86_64/: tlm.LinkFileList  tlm.d  tlm.dia
src/irstlm.build/Debug/verify-caching.build/: dgph~
src/irstlm.build/Debug/verify-caching.build/Objects-normal/x86_64/: verify-caching.LinkFileList  verify-caching.d  verify-caching.dia
